--- a/src/main/resources/static/style.css
+++ b/src/main/resources/static/style.css
@@ -48,9 +48,14 @@ main {
 
 body {
   background-color: #27005da4;
-  bottom: 0;
-  top: 0;
 
   display: flex;
   flex-direction: column;
+  min-height: 100%;
+}
+
+html {
+  display: flex;
+  flex-direction: column;
+  min-height: 100%;
 }
